--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>Riverscape Adventures</title>
-    <link rel="icon" href="images/business-logo.png">
+    <link rel="icon" href="business-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  
@@ -15,7 +15,7 @@
     <header class="header active">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img class="logo-image" class="navbar-brand" src="images/business-logo.png" alt="Logo">
+                <img class="logo-image" class="navbar-brand" src="business-logo.png" alt="Logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -55,7 +55,7 @@
             </div>
             <div class="service-div">
                 <div class="">
-                    <img class="banner" src="images/pricing-menubanner.jpg" alt="menu" srcset="">
+                    <img class="banner" src="pricing-menubanner.jpg" alt="menu" srcset="">
                 </div>
             </div>
         </section>
@@ -74,11 +74,11 @@
                         <div class="background-div">
                             <div class="first-call">
                                 <a class="phonelink" href="tel:+9179353236217" target="_blank">
-                                    <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 9353236217
+                                    <img class="phone-logo" src="phone-solid.svg" alt="call"> 9353236217
                                 </a>
                             </div>
                             <a class="phonelink" href="tel:+917353847757" target="_blank">
-                                <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 7353847757
+                                <img class="phone-logo" src="phone-solid.svg" alt="call"> 7353847757
                             </a>
                         </div>
                     </div>
@@ -88,7 +88,7 @@
     
                         <div>
                             <a class="directionlink" href="mailto:riverscapeadventures@gmail.com" target="_blank">
-                                <img class="direction-logo" src="images/email.png" alt="direction">
+                                <img class="direction-logo" src="email.png" alt="direction">
                             </a>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                 <a class="footer-links" href="https://www.instagram.com/riverscape_adventures/" target="_blank"><i class="fi fi-brands-instagram"></i></a>
             </div>
             <div class="footer-logo-div">
-                <img class="logo-image footer-logo" src="images/business-logo.png" alt="Logo">
+                <img class="logo-image footer-logo" src="business-logo.png" alt="Logo">
             </div>
             <div class="footer-contacts">
                 <div>
