--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+    <meta name="description" content="Discover the ultimate adventure at Riverscape Adventures, situated on the serene banks of the Agnashini River in Gokarna. Immerse yourself in the beauty of mangrove river views and indulge in a variety of exciting activities, including snorkeling, sightseeing, cruise boat rides, and the unique experience of a night DJ cruise. Riverscape Adventures offers an unparalleled blend of tranquility and thrill, allowing tourists to explore the natural wonders of Gokarna while enjoying an array of recreational options. Join us for an unforgettable journey along the Agnashini River, where every moment is a celebration of nature and adventure.">
     <title>Riverscape Adventures</title>
     <link rel="icon" href="business-logo.png">
     <link rel="stylesheet" href="styles.css">
