--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
         <div class="footer-div">
             <div class="links-div">
                 <p class="links-para">Social Media</p>
-                <a class="footer-links" href="https://www.instagram.com/riverscape_adventures/" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+                <div class="medias">
+                    <a class="footer-links" href="https://www.instagram.com/riverscape_adventures/" target="_blank"><i class="fi insta fi-brands-instagram fa-lg"></i></a>
+                    <a class="footer-links" href="https://www.facebook.com/profile.php?id=61553308508246&mibextid=ZbWKwL" target="_blank"><i class="fi fa-brands fa-facebook fa-lg"></i></a>
+                </div>
             </div>
             <div class="footer-logo-div">
                 <img class="logo-image footer-logo" src="business-logo.png" alt="Logo">
