--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Discover the ultimate adventure at Riverscape Adventures, situated on the serene banks of the Agnashini River in Gokarna. Immerse yourself in the beauty of mangrove river views and indulge in a variety of exciting activities, including snorkeling, sightseeing, cruise boat rides, and the unique experience of a night DJ cruise. Riverscape Adventures offers an unparalleled blend of tranquility and thrill, allowing tourists to explore the natural wonders of Gokarna while enjoying an array of recreational options. Join us for an unforgettable journey along the Agnashini River, where every moment is a celebration of nature and adventure.">
     <title>Riverscape Adventures</title>
-    <link rel="icon" href="business-logo.png">
+    <link rel="icon" href="images/business-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header class="header active">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img class="logo-image" class="navbar-brand" src="business-logo.png" alt="Logo">
+                <img class="logo-image" class="navbar-brand" src="images/business-logo.png" alt="Logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -23,6 +23,9 @@
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="#home">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#service">Services</a>
@@ -49,13 +52,23 @@
             </div>
         </section>
 
+        <section id="about">
+            <div>
+                <h2 class="heading-service">About</h2>
+            </div>
+            <div>
+                <p class="about-para">Riverscape Adventures, nestled along the Agnashini River in Gokarna, offers a perfect blend of tranquility and adventure. This idyllic destination provides a unique riverscape experience with breathtaking mangrove views. Visitors can enjoy thrilling activities like snorkeling, captivating sightseeing tours, and leisurely boat rides along the meandering Agnashini. As the sun sets, Riverscape transforms into a lively hotspot with night DJ cruise rides, allowing guests to dance under the stars. With a variety of experiences, Riverscape Adventures promises an unforgettable journey against the stunning backdrop of Gokarna's natural beauty.
+                </p>
+            </div>
+        </section>
+
         <section id="service">
             <div>
                 <h2 class="heading-service">Services</h2>
             </div>
             <div class="service-div">
                 <div class="">
-                    <img class="banner" src="pricing-menubanner.jpg" alt="menu" srcset="">
+                    <img class="banner" src="images/pricing-menubanner.jpg" alt="menu" srcset="">
                 </div>
             </div>
         </section>
@@ -74,11 +87,11 @@
                         <div class="background-div">
                             <div class="first-call">
                                 <a class="phonelink" href="tel:+9179353236217" target="_blank">
-                                    <img class="phone-logo" src="phone-solid.svg" alt="call"> 9353236217
+                                    <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 9353236217
                                 </a>
                             </div>
                             <a class="phonelink" href="tel:+917353847757" target="_blank">
-                                <img class="phone-logo" src="phone-solid.svg" alt="call"> 7353847757
+                                <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 7353847757
                             </a>
                         </div>
                     </div>
@@ -88,7 +101,7 @@
     
                         <div>
                             <a class="directionlink" href="mailto:riverscapeadventures@gmail.com" target="_blank">
-                                <img class="direction-logo" src="email.png" alt="direction">
+                                <img class="direction-logo" src="images/email.png" alt="direction">
                             </a>
                         </div>
                     </div>
@@ -121,15 +134,15 @@
                 </div>
             </div>
             <div class="footer-logo-div">
-                <img class="logo-image footer-logo" src="business-logo.png" alt="Logo">
+                <img class="logo-image footer-logo" src="images/business-logo.png" alt="Logo">
             </div>
             <div class="footer-contacts">
                 <div>
                     <h6 class="footer-header">For queries</h6>
                 </div>
                 <div class="footer-end">
-                    <a class="footer-links-2" href="tel:+919353236217" target="_blank">Call us</a>
-                    <a class="footer-links-2" href="mailto:riverscapeadventures@gmail.com" target="_blank">Send an Email</a>
+                    <a class="footer-links-2" href="tel:+919353236217" target="_blank">📞 Call</a>
+                    <a class="footer-links-2" href="mailto:riverscapeadventures@gmail.com" target="_blank">✉ Email</a>
                 </div>
             </div>
         </div>
