--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Discover the ultimate adventure at Riverscape Adventures, situated on the serene banks of the Agnashini River in Gokarna. Immerse yourself in the beauty of mangrove river views and indulge in a variety of exciting activities, including snorkeling, sightseeing, cruise boat rides, and the unique experience of a night DJ cruise. Riverscape Adventures offers an unparalleled blend of tranquility and thrill, allowing tourists to explore the natural wonders of Gokarna while enjoying an array of recreational options. Join us for an unforgettable journey along the Agnashini River, where every moment is a celebration of nature and adventure.">
     <title>Riverscape Adventures</title>
-    <link rel="icon" href="images/business-logo.png">
+    <link rel="icon" href="business-logo.png">
     <link rel="stylesheet" href="styles.css">
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -15,7 +15,7 @@
     <header class="header active">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-                <img class="logo-image" class="navbar-brand" src="images/business-logo.png" alt="Logo">
+                <img class="logo-image" class="navbar-brand" src="business-logo.png" alt="Logo">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -68,7 +68,7 @@
             </div>
             <div class="service-div">
                 <div class="">
-                    <img class="banner" src="images/pricing-menubanner.jpg" alt="menu" srcset="">
+                    <img class="banner" src="pricing-menubanner.jpg" alt="menu" srcset="">
                 </div>
             </div>
         </section>
@@ -87,11 +87,11 @@
                         <div class="background-div">
                             <div class="first-call">
                                 <a class="phonelink" href="tel:+9179353236217" target="_blank">
-                                    <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 9353236217
+                                    <img class="phone-logo" src="phone-solid.svg" alt="call"> 9353236217
                                 </a>
                             </div>
                             <a class="phonelink" href="tel:+917353847757" target="_blank">
-                                <img class="phone-logo" src="images/phone-solid.svg" alt="call"> 7353847757
+                                <img class="phone-logo" src="phone-solid.svg" alt="call"> 7353847757
                             </a>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
     
                         <div>
                             <a class="directionlink" href="mailto:riverscapeadventures@gmail.com" target="_blank">
-                                <img class="direction-logo" src="images/email.png" alt="direction">
+                                <img class="direction-logo" src="email.png" alt="direction">
                             </a>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="footer-logo-div">
-                <img class="logo-image footer-logo" src="images/business-logo.png" alt="Logo">
+                <img class="logo-image footer-logo" src="business-logo.png" alt="Logo">
             </div>
             <div class="footer-contacts">
                 <div>
