--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
                 <div class="footer-end">
                     <a class="footer-links-2" href="tel:+919353236217" target="_blank">📞 Call</a>
-                    <a class="footer-links-2" href="mailto:riverscapeadventures@gmail.com" target="_blank">✉ Email</a>
+                    <a class="footer-links-2" href="mailto:riverscapeadventures@gmail.com" target="_blank">📧 Email</a>
                 </div>
             </div>
         </div>
