--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Riverscape Adventures</title>
     <link rel="icon" href="business-logo.png">
     <link rel="stylesheet" href="styles.css">
+    <link href="business-logo.png" type="image/png" rel="icon"/>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
