--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
                   </li>
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" href="#gallery">Gallery</a>
-                  </li> -->
+                  </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#direction">Direction</a>
                   </li>
@@ -216,6 +216,51 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="gallery">
+          <div>
+            <h2 class="heading-service">Gallery</h2>
+          </div>
+
+          <div class="images-gallery">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="image1.jpg" class="d-block w-100" alt="image1">
+                </div>
+                <div class="carousel-item">
+                  <img src="image2.jpg" class="d-block w-100" alt="image2">
+                </div>
+                <div class="carousel-item">
+                  <img src="image3.jpg" class="d-block w-100" alt="image3">
+                </div>
+                <div class="carousel-item">
+                  <img src="image4.jpg" class="d-block w-100" alt="image4">
+                </div>
+                <div class="carousel-item">
+                  <img src="image5.jpg" class="d-block w-100" alt="image5">
+                </div>
+                <div class="carousel-item">
+                  <img src="image6.jpg" class="d-block w-100" alt="image6">
+                </div>
+                <div class="carousel-item">
+                  <img src="image7.jpg" class="d-block w-100" alt="image7">
+                </div>
+                <div class="carousel-item">
+                  <img src="image8.jpg" class="d-block w-100" alt="image8">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
         </section>
 
         <section id="direction">
