--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
                 </div>
             </div>
         </div>
-        <div>
+<!--         <div>
             <p class="om-para">Developed by <a class="om-link" href="http://www.linkedin.com/in/omkarsurangekar" target="_blank">omkar</a></p>
-        </div>
+        </div> -->
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
