--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <h2 class="heading-direction">Direction</h2>
             </div>
             <div class="map-div">
-                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3515.159064628436!2d74.34846117460039!3d14.533467578717776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbe839353221165%3A0xb57b83f83400f9c6!2sRiverscape%20Adventures!5e1!3m2!1sen!2sin!4v1697569547737!5m2!1sen!2sin" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3515.159460655426!2d74.34848757460038!3d14.533442678718394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbe839353221165%3A0xb57b83f83400f9c6!2sRiverscape%20Adventures!5e1!3m2!1sen!2sin!4v1703096202194!5m2!1sen!2sin"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </section>
 
